# data-pipeline

./: .gitignore  DESIGN.md  Makefile  README.md  radar.md
basic_orchestrator/: Dockerfile  README-dbt.md  README.md  README_time_travel.md  __init__.py  pip.sh  requirements.txt  run_local.sh
basic_orchestrator/config/tables/: feeds.yaml
basic_orchestrator/data/archive/: futures_order_events_20251212.csv  futures_order_events_20251212_extra_attribute.csv
basic_orchestrator/dbt/: dbt_project.yml  profiles.yml
basic_orchestrator/dbt/macros/: close_prior_versions.sql  (+3 more)
basic_orchestrator/examples/: configmap.yaml  feeds.yaml  values.yaml
basic_orchestrator/orchestrator/: config.py  loader.py  main.py  storage.py  validation.py
basic_orchestrator/terraform/: bigquery_datasets.tf  gcs.tf  outputs.tf  terraform.tfvars.example
dbt_project/: dbt_project.yml  packages.yml  profiles.yml  profiles.yml.example
dbt_project/data/: books.csv  counterparties.csv  instruments.csv  murex_trades.csv  rfq_stream.csv  traders.csv  venue_a_trades.csv
dbt_project/macros/: generate_trade_id.sql  normalise_counterparty_name.sql
dbt_project/seeds/: expected_sources.csv
dbt_project/snapshots/: books_snapshot.sql  counterparties_snapshot.sql  traders_snapshot.sql
docs/: adding_new_source.md  collibra.md  design.md  duckdb_local_dev.md  duckdb_local_dev_detailed.md  environment_promotion.md  identity.md  streaming.md  support_runbook.md  testing.md  trade_model_v2.md
orchestrator/: Dockerfile  __init__.py  pyproject.toml
orchestrator/k8s/: cronjob.yaml  kustomization.yaml
orchestrator/orchestrator/: __init__.py  archiver.py  bridge.py  config.py  control.py  dbt_runner.py  extract.py  main.py  metrics.py  parsers.py  rules.py  validator.py
regulatory_reporter/: Dockerfile  main.py  requirements.txt
scripts/: validate_specs.py
source_specs/trading/: murex_trades.yaml
streaming/: bridge.py
terraform/: README.md  bigquery_curated.tf  bigquery_raw.tf  bigquery_staging.tf  iam.tf  main.tf  variables.tf
terraform/int/: bigquery.tf  cloudrun.tf  gcs.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  secrets.tf  terraform.tfvars  variables.tf
terraform_bak/int/: bigquery.tf  gcs.tf  gke.tf  terraform.tfvars
(+68 files in other folders)
